refactoring algo search path